8214388: CDS dumping fails with java heap fragmentation
Force a full GC with a single thread before writing heap archive regions

Reviewed-by: sjohanss, jiangli